feat: add image dto and display definition in swagger output
